sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:12: error: ')' expected but '}' found.
        }
        ^AlgBubbleSort1:20: error: Unmatched closing brace '}' ignored here
}
^